DOC-1872: release-notes5107.md & nav.yml
1. Created 5.10.7 Release Notes file and added XSS vulnerability notice to same.
2. Updated nav.yml to add links to the 5.10.7 release note.

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -967,6 +967,11 @@
 - url: "release-notes"
   pages:
   - url: "6.0-upcoming-changes"
+  - url: "release-notes5107"
+    pages:
+    - url: "#Overview"
+    - url: "#Security fixes"
+    - url: "#Upgrading to the latest version of TinyMCE 5"
   - url: "release-notes5106"
     pages:
     - url: "#Overview"
