--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -967,6 +967,11 @@
 - url: "release-notes"
   pages:
   - url: "6.0-upcoming-changes"
+  - url: "release-notes5108"
+    pages:
+    - url: "#Overview"
+    - url: "#Security fixes"
+    - url: "#Upgrading to the latest version of TinyMCE 5"
   - url: "release-notes5107"
     pages:
     - url: "#Overview"
@@ -1247,6 +1252,7 @@
 
 - url: "changelog"
   pages:
+  - url: "#5.10.8 - 2023-10-19"
   - url: "#5.10.7 - 2022-12-07"
   - url: "#5.10.6 - 2022-10-19"
   - url: "#5.10.5 - 2022-05-25"
