DOC-2210: TinyMCE 5.10.9 Community and GA Docs Release. (#13)
* DOC-2187: Temporarily remove Github Actions workflows

* DOC-2186: TinyMCE 5.10.8 Release Notes (#10)

* DOC-2186: release-notes5108.md

Added file, `release-notes5108.md` to project.

Added 5.10.8-specific release notes outline to file.

* DOC-2186: nav.yml

Added 5.10.8-specific navigation.

* DOC-2186: changelog.md

Added outline of expected 5.10.8 changelog entries.

* DOC-2186: release-notes5108.md

Added writeup of TINY-10215 to security fixes section of the release notes.

* DOC-2186: README.md

Removed no-longer-working outbound link to wercker status.

* Remove bug fix placeholder, add GHSA link and update changelog entry.

* copy edits, and DOM Parser link update

* Updated reference to SaxParser rather than DOMParser for 5x.

* DOC-2186: added TINY-10286 placeholder, and 10215 title.

* DOC-2186: draft content added for TINY-10286

* Update changelog.md

* Update changelog.md

* Update release-notes/release-notes5108.md

* Update _data/nav.yml

* Update release-notes/release-notes5108.md

* Update release-notes/release-notes5108.md

* Update release-notes/release-notes5108.md

* Update release-notes/release-notes5108.md

* Update release-notes/release-notes5108.md

* Update release-notes/release-notes5108.md

* DOC-2186: update release-notes, changelog.md and add 5108 to nav.yml.

---------

Co-authored-by: Brian Forte <brian.forte@tiny.cloud>

* Tinymce 5109 release notes

* Update _data/nav.yml

* Update release-notes/release-notes5109.md

* Update release-notes/release-notes5109.md

* Update release-notes/release-notes5109.md

Co-authored-by: mkzhx <mike@mkzh.org>

* Update release-notes/release-notes5109.md

Co-authored-by: mkzhx <mike@mkzh.org>

* Update release-notes/release-notes5109.md

Co-authored-by: mkzhx <mike@mkzh.org>

---------

Co-authored-by: Mike Zhu <mkzh.org@gmail.com>
Co-authored-by: Bria

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -967,6 +967,11 @@
 - url: "release-notes"
   pages:
   - url: "6.0-upcoming-changes"
+  - url: "release-notes5109"
+    pages:
+    - url: "#Overview"
+    - url: "#Security fixes"
+    - url: "#Upgrading to the latest version of TinyMCE 5"
   - url: "release-notes5108"
     pages:
     - url: "#Overview"
@@ -1252,6 +1257,7 @@
 
 - url: "changelog"
   pages:
+  - url: "#5.10.9 - 2023-11-15"
   - url: "#5.10.8 - 2023-10-19"
   - url: "#5.10.7 - 2022-12-07"
   - url: "#5.10.6 - 2022-10-19"
